--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,6 +99,7 @@
       <left>
         <img src="https://user-images.githubusercontent.com/124388206/220789168-1aaa493f-0d6a-492c-ba7f-6de93dafca18.png" height="75" align="left">
       </left>
+      <div class="navelements" id="myNavelements">
         <a href="#aboutus" align="right" class="active">About Us</a>
         <a href="#news" align="right">News</a>
         <a href="#careers" align="right">Careers</a>
