--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,6 @@
             new TxtRotate(elements[i], JSON.parse(toRotate), period);
           }
         }
-        // INJECT CSS
         var css = document.createElement("style");
         css.type = "text/css";
         css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
@@ -97,13 +96,15 @@
 
     <div class="navbar" id="myNavbar">
       <left>
-        <img src="https://user-images.githubusercontent.com/124388206/220789168-1aaa493f-0d6a-492c-ba7f-6de93dafca18.png" height="75" align="left">
+        <a href="gravrobo.github.io">
+          <img src="https://user-images.githubusercontent.com/124388206/220789168-1aaa493f-0d6a-492c-ba7f-6de93dafca18.png" height="75" align="left">
+        </a>
       </left>
       <div class="navelements" id="myNavelements">
-        <a href="#aboutus" align="right" class="active">About Us</a>
-        <a href="#news" align="right">News</a>
-        <a href="#careers" align="right">Careers</a>
-        <a href="#technology" align="right">Technology</a>
+        <a href="gravrobo.github.io/aboutus" align="right" class="active">About Us</a>
+        <a href="gravrobo.github.io/news" align="right">News</a>
+        <a href="gravrobo.github.io/careers" align="right">Careers</a>
+        <a href="gravrobo.github.io/technology" align="right">Technology</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
