--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,15 +96,15 @@
 
     <div class="navbar" id="myNavbar">
       <left>
-        <a href="www.gravelrobotics.com">
+        <a href="https://www.gravelrobotics.com">
           <img src="https://user-images.githubusercontent.com/124388206/220789168-1aaa493f-0d6a-492c-ba7f-6de93dafca18.png" height="75" align="left">
         </a>
       </left>
       <div class="navelements" id="myNavelements">
-        <a href="www.gravelrobotics.com/aboutus" align="right" class="active">About Us</a>
-        <a href="www.gravelrobotics.com/news" align="right">News</a>
-        <a href="www.gravelrobotics.com/careers" align="right">Careers</a>
-        <a href="www.gravelrobotics.com/technology" align="right">Technology</a>
+        <a href="aboutus" align="right" class="active">About Us</a>
+        <a href="news" align="right">News</a>
+        <a href="careers" align="right">Careers</a>
+        <a href="technology" align="right">Technology</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
