--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
         </a>
       </left>
       <div class="navelements" id="myNavelements">
-        <a href="aboutus" align="right" class="active">About Us</a>
+        <a href="about-us" align="right" class="active">About Us</a>
         <a href="news" align="right">News</a>
         <a href="careers" align="right">Careers</a>
         <a href="technology" align="right">Technology</a>
