--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
       
     <script>
       function myFunction() {
-        var x = document.getElementById("myNavbar");
-        if (x.className === "navbar") {
+        var x = document.getElementById("myNavelements");
+        if (x.className === "navelements") {
           x.className += " responsive";
         } else {
-          x.className = "navbar";
+          x.className = "navelements";
         }
       }
       
