--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@
         <a href="careers" align="right">Careers</a>
         <a href="technology" align="right">Technology</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
+          <i class="fa fa-bars" style="font-size:36px"></i>
         </a>
     </div>
 
