--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
   
   </head>
 
-  <body style="background-color:black;">
+  <body style="background-image: url("https://user-images.githubusercontent.com/126240516/221169770-6763c3ec-be8a-4275-94aa-d328fa7e0fa6.png");">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
