--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
   
   </head>
 
-  <body style="background-image: url("bgimg.png");">
+  <body style="background-color: #000000;">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
