--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,15 @@ h1 {
 h4 {
   color: #FFFFFF;
   font-weight: 300;
-  font-size: 1em;
+  font-size: 3em;
+  width: 65%;
+}
+
+@media only screen and (max-width: 768px) {
+  h4 {
+  color: #FFFFFF;
+  font-weight: 300;
+  font-size: 2em;
   width: 65%;
 }
 
@@ -49,6 +57,7 @@ h4 {
 }
 
 .navbar {
+  z-index: 9999;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
@@ -89,13 +98,14 @@ h4 {
   .navelements.responsive a.icon {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 5px;
     padding: 22px 16px;
   }
   .navelements.responsive a {
     float: none;
     display: block;
     text-align: right;
+    padding: 0;
   }
 }
 
