--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,10 +46,11 @@ h4 {
 
 @media only screen and (max-width: 768px) {
   h4 {
-  color: #FFFFFF;
-  font-weight: 300;
-  font-size: 2em;
-  width: 65%;
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 2em;
+    width: 65%;
+  }
 }
 
 .txt-rotate > .wrap { 
