--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,11 +58,13 @@ h4 {
 }
 
 .navbar {
-  z-index: 9999;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
   width: 100%;
 }
 
@@ -99,7 +101,7 @@ h4 {
   .navelements.responsive a.icon {
     position: absolute;
     right: 0;
-    top: 5px;
+    top: 0;
     padding: 22px 16px;
   }
   .navelements.responsive a {
@@ -115,7 +117,7 @@ h4 {
 }
 
 .main {
-  margin-top: 30px;
+  margin-top: 100px;
 }
 
 .footer {
