--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,9 +62,6 @@ h4 {
   background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999;
   width: 100%;
 }
 
@@ -108,7 +105,7 @@ h4 {
     float: none;
     display: block;
     text-align: right;
-    padding: 0;
+    padding: 22px 70px 0px 0px;
   }
 }
 
