--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,9 +58,10 @@ h4 {
 }
 
 .navbar {
+  position: fixed;
+  z-index: 100;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
   top: 0;
   width: 100%;
 }
