--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,8 +98,10 @@
               </a>
             </left>
             <div class="navelements" id="myNavelements">
-              <a href="about-us" align="right" class="active">About Us</a>
-              <a href="technology" align="right">Technology</a>
+              <ul>
+                <li><a href="about-us" align="right" class="active">About Us</a></li>
+                <li><a href="technology" align="right">Technology</a></li>
+              </ul>
               <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars" style="font-size:34px"></i>
               </a>
