--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,6 +110,20 @@ h4 {
   }
 }
 
+@media screen and (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+  }
+  
+  .navbar a:first-child {
+    order: 2;
+  }
+  
+  .navbar a:last-child {
+    order: 1;
+  }
+}
+
 .spacer {
   height: 10px;
 }
