--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -118,6 +118,13 @@ h4 {
   margin-top: 100px;
 }
 
+.txt-rotate:before {
+  content: attr(data-rotate);
+  background: linear-gradient(to right, #38B6FF, #8117EB, #FF66C4);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+
 .footer {
   position: fixed;
   left: 0;
