--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,6 +61,7 @@ h4 {
   background: linear-gradient(to right, #38B6FF, #8117EB, #FF66C4);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
+  background-clip: text;
 }
 
 .navbar {
