--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,7 +57,7 @@ h4 {
   border-right: 0.08em solid #666;
 }
 
-.gradient {
+.txt-rotate > .gradient {
   background: linear-gradient(to right, #38B6FF, #8117EB, #FF66C4);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
