--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,11 +57,16 @@ h4 {
   border-right: 0.08em solid #666;
 }
 
-.txt-rotate > .gradient {
+.gradient-text {
   background: linear-gradient(to right, #38B6FF, #8117EB, #FF66C4);
-  -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.rotate-container .rotate-item:first-child .gradient-text {
+  background: linear-gradient(to right, #38B6FF, #8117EB, #FF66C4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .navbar {
