--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,12 +110,16 @@ h4 {
   }
 }
 
+.bigspacer {
+  height: 12px;
+}
+
 .midspacer {
   height: 10px;
 }
 
 .lilspacer {
-  height: 5px;
+  height: 8px;
 }
 
 .main {
